--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
 	<div class="contact">
-	    <h2>Contact : c.wolf [@] kiwec.net</h2>
+		<h2>Contact : c.wolf [@] kiwec.net (<a href="/kiwec.asc">PGP</a>)</h2>
 	</div>
 </body>
 </html>
